# test_infog2

./: .env  .env.prod  Dockerfile  README.md  docker-compose.yml  prod.yml  pyproject.toml  teste_infog2.postman_collection.json
app/api/: serializers.py  urls.py  views.py
app/api/docs/: survivor_schema.py
app/api/tests/: test_exchange_views.py  test_report_views.py  test_survivor_views.py
app/app/: settings.py  urls.py
app/core/: models.py
app/core/migrations/: 0001_initial.py  0002_rename_sexo_survivor_sex.py  0003_inventory.py  0004_survivor_infected_report.py
app/core/tests/: test_models.py
app/survivor/: serializers.py  urls.py  views.py
app/survivor/tests/: test_views.py
nginx/: nginx.conf
